@@ -112,7 +112,7 @@
            Mod-1  Shift 
         </td>
         <td align="center" nowrap>
-          Iso_left_tab
+          Tab
         </td>
         <td style="color:#0000ff" nowrap>
           Select the previous child
@@ -544,7 +544,7 @@
           
         </td>
         <td align="center" nowrap>
-            <
+          Less
         </td>
         <td style="color:#0000ff" nowrap>
           Open the main menu
@@ -555,7 +555,7 @@
            Control 
         </td>
         <td align="center" nowrap>
-            <
+          Less
         </td>
         <td style="color:#0000ff" nowrap>
           Open the main menu
@@ -775,7 +775,7 @@
            Mod-1  Shift 
         </td>
         <td align="center" nowrap>
-          Iso_left_tab
+          Tab
         </td>
         <td style="color:#0000ff" nowrap>
           Select the previous child
@@ -867,6 +867,17 @@
         </td>
         <td style="color:#0000ff" nowrap>
           Open the next window in a new frame in the parent frame
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+          
+        </td>
+        <td align="center" nowrap>
+            A
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Add a default frame in the current frame
         </td>
       </tr>
       <tr>
@@ -1318,17 +1329,6 @@
         </td>
         <td align="center" nowrap>
           Escape
-        </td>
-        <td style="color:#0000ff" nowrap>
-          Leave the info mode
-        </td>
-      </tr>
-      <tr>
-        <td align="right" style="color:#ff0000" nowrap>
-          
-        </td>
-        <td align="center" nowrap>
-             
         </td>
         <td style="color:#0000ff" nowrap>
           Leave the info mode
