@@ -74,10 +74,10 @@
       <a name="FRAME-ADDING-MENU"></a><a href="#FRAME-MENU">Frame-Adding-Menu</a>
     </h3>
     <p>
-      a: Add a default frame
+      a: Add a default frame in the current frame
     </p>
     <p>
-      p: Add a placed frame
+      p: Add a placed frame in the current frame
     </p>
     <hr>
     <h3>
