@@ -1,3 +1,11 @@
+2008-05-12  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/bindings-second-mode.lisp (define-second-key #\a): New
+	binding on 'add-default-frame'.
+
+	* src/clfswm-autodoc.lisp (produce-*-doc-*-in-file): Show a
+	message to follow the autodocumentation process.
+
 2008-05-10  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-util.lisp (bind-or-jump): Bind "Tab", "Return" and
